we got predictions bb

--- a/weather.ipynb
+++ b/weather.ipynb
@@ -410,11 +410,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = DecisionTreeClassifier()\n",
+    "clf = DecisionTreeClassifier(criterion=\"entropy\", max_depth=4)\n",
     "\n",
     "# Train Decision Tree Classifer\n",
     "clf = clf.fit(X_train,y_train)\n",
@@ -425,19 +425,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6666666666666666\n"
+      "Accuracy: 0.8\n"
      ]
     }
    ],
    "source": [
     "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted price:  1\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/erikafox/opt/miniconda3/lib/python3.9/site-packages/sklearn/base.py:445: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = clf.predict([[94,0,0]])\n",
+    "  \n",
+    "# print the predicted price\n",
+    "print(\"Predicted price: % d\\n\"% y_pred) "
    ]
   }
  ],
